Trying to fix z-index problem on iOS

--- a/nodeserver/src/public/css/main.css
+++ b/nodeserver/src/public/css/main.css
@@ -143,8 +143,10 @@ a:active {
               left: 6px;
               top: 5px;
               cursor: pointer;
-              -webkit-transform: translate3d(0, 0, 1px);
-              transform: translate3d(0, 0, 1px);
+              -webkit-transform: translateZ(1px);
+              -moz-transform: translateZ(1px);
+              -o-transform: translateZ(1px);
+              transform: translateZ(1px);
               z-index: 1; }
             #wrapper #chart-wrapper #chart .row .wrapper .name-wrapper span.name:hover {
               font-weight: 800; }
